           versa

         • ‘calc_WodaFuchs2008()’: Function to obtain the equivalent
           dose using the approach proposed by Woda and Fuchs, 2008.

  Bugfixes and changes:

         • ‘analyse_IRSAR.RF()’

             • Multicore processing now also supports Windows (#47)

             • Fixed a bug where manually specifying the number of CPU
               cores via 'method.control = list(cores = x)' was not
               respected

         • ‘plot_FilterCombinations()’

             • Add interative mode (‘interative = TRUE’)

         • ‘plot_GrowthCurve()’

             • The function now turns ‘Inf’ into ‘NA’,

             • the argument ‘na.rm’ is defunct and should not be used
               anymore,

             • minor code modifications to handle special cases such as
               input values with a ‘data.frame’ with no error column,

             • extent examples by for test data set by Berger & Huntley
               (1989).

         • ‘read_BIN2R()’

             • The function unexpectetly dropped are warning for an
               unused connection; fixed,

             • if a file link was provided and the argument ‘pattern’
               was set and error was shown; fixed.

         • ‘read_XSYG2R()’

             • Argument ‘verbose’ added for more consistency with other
               functions,

             • the functions now supports the import form files via the
               internet,

             • minor modifications to support minimal examples without
               'recordType'.

  S4 and Internals:

         • The ‘RLum.Analysis’ show method failed for
           ‘RLum.Data.Spectrum’ objects; fixed.

         • Method for ‘get_RLum’ with signature ‘NULL’ added. Now it
           returns ‘NULL’

         • Start supporting RStudio add-ins for more advanced users.

         • Add fitting test data set by Berger & Huntley (1989) as
           external data
